--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-VITE_BACKEND_URL=http://localhost:3000
+# VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL = https://pw-genius-production.up.railway.app
 
 # Cognito Domain
 VITE_CLIENT_ID=22ui8epm25gr3r2loks4tdq6n6
