--- a/frontend/.env
+++ b/frontend/.env
@@ -2,8 +2,11 @@
 VITE_BACKEND_URL = https://pw-genius-production.up.railway.app
 
 # Cognito Domain
-VITE_CLIENT_ID=22ui8epm25gr3r2loks4tdq6n6
-VITE_LOGOUT_URI=http://localhost:5173/
-VITE_SUCCESS_REDIRECT_URI=http://localhost:5173/success
-VITE_COGNITO_DOMAIN=https://ap-south-1a9crqpyeh.auth.ap-south-1.amazoncognito.com
-VITE_COGNITO_AUTHORITY=https://cognito-idp.ap-south-1.amazonaws.com/ap-south-1_A9CrqpyEH
+VITE_CLIENT_ID = 22ui8epm25gr3r2loks4tdq6n6
+VITE_LOGOUT_URI = http://localhost:5173/
+VITE_SUCCESS_REDIRECT_URI = http://localhost:5173/success
+VITE_COGNITO_DOMAIN = https://ap-south-1a9crqpyeh.auth.ap-south-1.amazoncognito.com
+VITE_COGNITO_AUTHORITY = https://cognito-idp.ap-south-1.amazonaws.com/ap-south-1_A9CrqpyEH
+
+# 
+VITE_NOMINATION_CLOSING_TIME = 1759256999
