--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,26 @@
 {
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://b2ab4430ec10.ngrok-free.app/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "framework": "vite",
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "ngrok-skip-browser-warning",
+          "value": "any"
+        }
+      ]
+    }
+  ]
 }
